# work_ws

./: README.md
work_ws/: README.md
work_ws/devel/: .catkin  local_setup.fish  setup.fish  setup.sh
work_ws/devel/lib/pkgconfig/: g1_description.pc
work_ws/devel/share/g1_description/cmake/: g1_descriptionConfig.cmake
work_ws/src/g1_description/: CMakeLists.txt  g1_29dof_mode_11.urdf  g1_29dof_mode_14.urdf  g1_29dof_mode_14.urdf.backup
work_ws/src/g1_description/config/: g1_control.yaml  joint_config.yaml  mini_lock.py  robot_control.yaml
work_ws/src/g1_description/launch/: g1.launch  gazebo_display.launch
work_ws/src/g1_description/world/: factory_room.world
work_ws/src/g1_description/world/room/: model.sdf
